--- a/docs/dev-ops/mysql/docker-compose.yml
+++ b/docs/dev-ops/mysql/docker-compose.yml
@@ -2,13 +2,13 @@
 version: '3.9'
 services:
   mysql:
-    image: mysql:8.0.32
+    image: atomhub.openatom.cn/amd64/mysql:8.0.34
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       TZ: Asia/Shanghai
-      #      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # 可配置无密码，注意配置 SPRING_DATASOURCE_PASSWORD=
+      #MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # 可配置无密码，注意配置 SPRING_DATASOURCE_PASSWORD=
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_USER: xfg
       MYSQL_PASSWORD: 123456
@@ -23,7 +23,7 @@ services:
 
   # 自动加载数据
   mysql-job-dbdata:
-    image: alpine:3.18.2
+    image: atomhub.openatom.cn/amd64/alpine:3.18
     container_name: mysql-job-dbdata
     volumes:
       - /var/lib/mysql
