--- a/big-market-domain/pom.xml
+++ b/big-market-domain/pom.xml
@@ -43,6 +43,10 @@
             <groupId>cn.bugstack</groupId>
             <artifactId>big-market-types</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
