--- a/big-market-domain/pom.xml
+++ b/big-market-domain/pom.xml
@@ -47,6 +47,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
