--- a/big-market-infrastructure/pom.xml
+++ b/big-market-infrastructure/pom.xml
@@ -36,6 +36,10 @@
             <groupId>cn.bugstack</groupId>
             <artifactId>big-market-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-annotations-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
